# bot

./: .gitignore  README.md  config.py  deploy-commands.js  eslint.config.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.json  tsconfig.server.json  tsconfig.spec.json
cogs/: __init__.py
cogs/appeals/: __init__.py  appeals.py
cogs/moderation/: ban.py  unban.py
cogs/owner/: __init__.py  acl.py  reload.py
cogs/utilities/: __init__.py  server.py
commands/appeals/: appeals.js
commands/moderation/: appeals.js  ban.js  unban.js
commands/owner/: acl.js  reload.js
commands/utilites/: server.js
database/: __init__.py  db.py
databases/: db.d.ts  db.js
errors/DBAB/: DurationInputError.js
events/: interaction.js  on_ban.js  on_ban.py  on_interaction.py
helpers/: __init__.py  hash.ts  hash_helper.py  helpers.js  helpers.py  perm_helper.js  permission_helper.py  validate_perms_json.ts
models/: ACLModel.js  BansModel.js  __init__.py  appeal.py  appealModel.js  appealModel.mjs  ban.py  banCountModel.js  ban_count.py  userCacheModel.js  userCacheModel.ts  user_cache.py
